--- a/REACT/umedi_vladimir/6-redux-praktic/package.json
+++ b/REACT/umedi_vladimir/6-redux-praktic/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "react-theory",
+  "name": "react-quiz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -26,14 +27,12 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "is_js": "^0.9.0",
     "jest": "20.0.4",
-    "node-sass": "^4.9.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
-    "prop-types": "^15.6.2",
-    "radium": "^0.24.0",
     "raf": "3.4.0",
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
@@ -43,7 +42,6 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
-    "sass-loader": "^7.0.3",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
